# Construct-IDE

./: .env.example  .env.old  .gitignore  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
app/: components.json  electron-builder.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsup.config.ts  tsup.mastra.config.ts  tsup.sidecar.config.ts  vite.config.ts
app/scripts/: bridge-smoke.mjs  prepare-mastra.mjs  prepare-sidecar.mjs
app/src/: mastra-worker.ts
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/00000000000000_construct_core/: down.sql  up.sql
app/src-tauri/src/: core_state.rs  error.rs  learning.rs  legacy_sidecar.rs  lib.rs  main.rs  paths.rs  profile.rs  settings.rs  window.rs
app/src-tauri/src/ai/: mastra.rs  mod.rs  tools.rs
app/src-tauri/src/commands/: agents.rs  flow.rs  flow_trace.rs  git.rs  interact_trace.rs  learning.rs  lsp.rs  mod.rs  projects.rs  settings.rs  system.rs  terminal.rs  workspace.rs
app/src-tauri/src/git/: mod.rs  service.rs
app/src-tauri/src/lsp/: framing.rs  mod.rs  service.rs
app/src-tauri/src/process/: mod.rs  runner.rs
app/src-tauri/src/projects/: legacy.rs  mod.rs  models.rs  store.rs
app/src-tauri/src/storage/: json_store.rs  migrations.rs  mod.rs  models.rs  schema.rs  ui_state.rs
app/src-tauri/src/terminal/: mod.rs  service.rs
app/src-tauri/src/workspace/: mod.rs  paths.rs  service.rs  tree.rs  watcher.rs
docs/: ai-usage-gateway.md  construct-cloud-architecture.md  construct-flow-mastery-system.md  construct-flow-path-tasks-concepts-brief.md  construct-flow-projects-implementation-brief.md  construct-flow-socratic-agent-brief.md  construct-reengineering-checklist.md  creation-v2-architecture.md  implementation-ledger.md  opaline-ui-workflow.md  releasing.md  tape-changelog.md  tauri-migration.md
prisma/: schema.prisma
runner/: package.json
scripts/: test_interact.ts
website/: index.html  package.json  pnpm-lock.yaml  script.js  styles.css  tsconfig.json
(+1410 files in other folders)
