[package]
name = "construct"
version = "0.6.7-alpha"
description = "Construct desktop IDE for agentic project work."
authors = ["Abhinav Mishra <abhinav@tryconstruct.cc>"]
edition = "2021"

[lib]
name = "construct_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.3", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.3"
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
notify = "8"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
window-vibrancy = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
